[package]
name = "euler-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "euler_math"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["num-bigint"]}
rayon = "1.7.0"
num-bigint = "0.4"
num-traits = "0.2.16"